changed some css file

--- a/css/critical.css
+++ b/css/critical.css
@@ -298,6 +298,7 @@
     display: block !important;
     position: static !important;
     width: 100% !important;
+    padding: 0;
   }
   
   .dropdown.active .dropdown-menu {
