--- a/css/critical.css
+++ b/css/critical.css
@@ -113,20 +113,20 @@
         width: 100%;
         box-shadow: none;
     }
-    
+
     .dropdown.active .dropdown-menu {
         display: block !important;
         opacity: 1;
         transform: translateY(0);
     }
-    
+
     .dropdown-toggle::after {
         content: '';
         display: inline-block;
         margin-left: 0.5em;
         transition: transform 0.3s ease;
     }
-    
+
     .dropdown.active .dropdown-toggle::after {
         transform: rotate(180deg);
     }
@@ -206,7 +206,8 @@
     background-color: var(--cyber-blue);
     border-radius: 50%;
     transition: background-color 0.3s ease, transform 0.3s ease;
-    color: #ffffff; /* Icon color */
+    color: #ffffff;
+    /* Icon color */
     text-decoration: none;
 }
 
@@ -288,23 +289,32 @@
     }
 }
 
+.footer-company-text {
+    text-align: center;
+    color: white;
+    font-weight: 400;
+    padding-top: 20px;
+}
 
+.footer-company-text span {
+    color: yellow;
+}
 
 @media (max-width: 768px) {
-  .dropdown-menu {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    display: block !important;
-    position: static !important;
-    width: 100% !important;
-    padding: 0;
-  }
-  
-  .dropdown.active .dropdown-menu {
-    max-height: 500px !important;
-  }
-  
+    .dropdown-menu {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
+        display: block !important;
+        position: static !important;
+        width: 100% !important;
+        padding: 0;
+    }
+
+    .dropdown.active .dropdown-menu {
+        max-height: 500px !important;
+    }
+
 }
 
 
@@ -355,13 +365,26 @@
 
 /* Animations */
 @keyframes slideIn {
-    from { opacity: 0; transform: translateY(-20px); }
-    to { opacity: 1; transform: translateY(0); }
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* Animations */
 @keyframes rotation {
-    from { opacity: 0; transform: rotate(0deg); }
-    to { opacity: 1; transform: rotate(360deg); }
-}
+    from {
+        opacity: 0;
+        transform: rotate(0deg);
+    }
 
+    to {
+        opacity: 1;
+        transform: rotate(360deg);
+    }
+}
